cmake_minimum_required(VERSION 3.31)
project(AdventOfCPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(y2019d2 y2019d2/main.cpp)
add_executable(y2019d1 y2019d1/main.cpp)
add_executable(y2019d3 y2019d3/main.cpp)
add_executable(y2019d4 y2019d4/main.cpp)
add_executable(y2015d1 y2015d1/main.cpp)
add_executable(y2015d2 y2015d2/main.cpp)
